# django-logger-extra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: publish.yml  test.yml
logger_extra/: apps.py  filter.py  formatter.py  logger_context.py  middleware.py  utils.py
logger_extra/extras/: configure.py  django_auditlog.py  sentry.py
logger_extra/tests/: settings.py  test_logger_context.py
tests/: settings.py  test_django_auditlog.py  test_extras.py  test_logger_context.py  test_middleware.py  views.py
tests/migrations/: 0001_initial.py
