[project]
name = "django-logger-extra"
authors = [{ name = "City of Helsinki", email = "dev@hel.fi" }]
description = "A module that provides extras for logger."
readme = "README.md"
version = "0.0.0"
keywords=[
    "logging",
    "extra tools",
    "plugin extension",
]
classifiers=[
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["django>=4.2",]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-logger-extra"
Issues = "https://github.com/City-of-Helsinki/django-logger-extra/issues"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
]
extend-per-file-ignores = { "*/migrations/*" = ["E501"], "*/tests/*" = ["E501"] }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "logger_extra.tests.settings"

[tool.coverage.run]
source = ["logger_extra"]
omit = ["logger_extra/migrations/*", "*/tests/*"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "myproject.settings"